...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            tools:src="@color/black" />

        <ImageButton
            android:id="@+id/favorit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_favorite_white_18dp"
            app:layout_constraintEnd_toEndOf="@+id/poster"
            app:layout_constraintTop_toTopOf="@+id/poster"
            android:background="@null"
...
