...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--Ukuran ini setengah dari ukuran yang sebenarnya-->
    <ImageView
        android:id="@+id/poster"
        android:layout_width="110dp"
        android:layout_height="165dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black" />
...
